[tool.poetry]
name = "dsalgorithms-python"
version = "0.1.0"
description = ""
authors = ["T. E. Kalayci <tekrei@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23"
matplotlib = "^3.6"

[tool.poetry.dev-dependencies]
autopep8 = "^2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
