[tool.poetry]
name = "dsalgorithms-python"
version = "0.1.0"
description = ""
authors = ["T. E. Kalayci <tekrei@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "*"
matplotlib = "^3.8"

[tool.poetry.dev-dependencies]
autopep8 = "^2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
