[tool.poetry]
name = "dsalgorithms-python"
version = "0.1.0"
description = ""
authors = ["T. E. Kalayci <tekrei@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "*"
matplotlib = "*"
pandas = "*"

[tool.poetry.dev-dependencies]
autopep8 = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
